# tts-wrapper

./: README.md  pyproject.toml  requirements.dev.txt  requirements.txt
tts_wrapper/: pyttsx.py  tts.py
tts_wrapper/engines/: __init__.py
tts_wrapper/engines/pico/: client.py
tts_wrapper/engines/sapi/: client.py
