[tool.poetry]
name = "tts-wrapper-local"
version = "0.8.0"
description = "TTS-Wrapper makes it easier to use text-to-speech APIs by providing a unified and easy-to-use interface."
authors = ["Giulio Bottari <giuliobottari@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/avryhof/tts-wrapper"
documentation = "https://github.com/avryhof/tts-wrapper"
keywords = ["tts", "text-to-speech", "speech synthesis", "sapi", "picotts"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/avryhof/tts-wrapper/issues"

[tool.poetry.dependencies]
python = "^3.8"
requests = { version = "^2.28.0", optional = true }
pyttsx3 = { version = "^2.90", optional = true }

[tool.poetry.extras]
sapi = ["pyttsx3"]

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-mock = "^3.5.1"
black = { version = "^22.1.0", allow-prereleases = true }
types-requests = "^2.27.31"
mypy = "^0.971"
pytest-cov = "^3.0.0"
filetype = "^1.0.13"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

